Revert "Add page"

--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,23 +1,10 @@
-# development:
-#   adapter: async
-
-# test:
-#   adapter: test
-
-# production:
-#   adapter: redis
-#   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-#   channel_prefix: Rails_Chat_App_production
-
 development:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: rails-chat-tutorial_development
+  adapter: async
 
 test:
-  adapter: async
+  adapter: test
 
 production:
   adapter: redis
   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: rails_chat_app_production
+  channel_prefix: Rails_Chat_App_production
